--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="UTF-8">
+  <title>My Web Page</title>
+  <style>
+    body {
+      background-color: #F2F2F2; /* Light background color */
+      color: #000000; /* Black text color */
+      margin: 0 20px; /* Spacing on either side of the body */
+    }
+
+    header {
+      background-color: #CCCCCC; /* Light background color for the header */
+      padding: 20px; /* Padding around the header content */
+    }
+  </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <header>
+    <h1>My Header</h1>
+  </header>
+  
+  <h2>Content Goes Here</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim leo mi, id venenatis risus commodo et.</p>
+  <!-- Add more content as needed -->
 </body>
 </html>
