--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
   <title>My Web Page</title>
   <style>
     body {
-      background-color: #F2F2F2; /* Light background color */
+      background-color: #8BD9C8; /* Light background color */
       color: #000000; /* Black text color */
-      margin: 0 20px; /* Spacing on either side of the body */
+      margin: 0 60px; /* Spacing on either side of the body */
     }
 
     header {
-      background-color: #CCCCCC; /* Light background color for the header */
-      padding: 20px; /* Padding around the header content */
+      background-color: #77C18C; /* Light background color for the header */
+      
+    }
+    content{
+        background-color: #E2F0CB;
     }
   </style>
 </head>
@@ -20,9 +23,9 @@
   <header>
     <h1>My Header</h1>
   </header>
-  
+  <div class="content">
   <h2>Content Goes Here</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim leo mi, id venenatis risus commodo et.</p>
-  <!-- Add more content as needed -->
+  </div>
 </body>
 </html>
