--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
         rawDisplay.textContent = raw;
         bricksDisplay.textContent = bricks;
         waterDisplay.textContent = water;
-        aceticDisplay.textContent
-        hydroDisplay.textContent
-        ammoniumDisplay.textContent
-        calcMorphDisplay.textContent
-        sodiumDisplay.textContent
+        aceticDisplay.textContent = water;
+        hydroDisplay.textContent = water;
+        ammoniumDisplay.textContent = water;
+        calcMorphDisplay.textContent = water;
+        sodiumDisplay.textContent = water;
 
     }
 </script>
