--- a/index.html
+++ b/index.html
@@ -177,18 +177,18 @@
         remMorph = morph % 8;
         bricks = Math.floor(bags/16)
         water = raw * 7;
-        morphDisplay.textContent = morph;
-        remMorphDisplay.textContent = remMorph;
-        bagDisplay.textContent = bags;
-        podsDisplay.textContent = pods;
-        rawDisplay.textContent = raw;
-        bricksDisplay.textContent = bricks;
-        waterDisplay.textContent = water;
-        aceticDisplay.textContent = water;
-        hydroDisplay.textContent = water;
-        ammoniumDisplay.textContent = water;
-        calcMorphDisplay.textContent = water;
-        sodiumDisplay.textContent = water;
+        morphDisplay.textContent = toString(morph);
+        remMorphDisplay.textContent = toString(remMorph);
+        bagDisplay.textContent = toString(bags);
+        podsDisplay.textContent = toString(pods);
+        rawDisplay.textContent = toString(raw);
+        bricksDisplay.textContent = toString(bricks);
+        waterDisplay.textContent = toString(water);
+        aceticDisplay.textContent = toString(water);
+        hydroDisplay.textContent = toString(water);
+        ammoniumDisplay.textContent = toString(water);
+        calcMorphDisplay.textContent = toString(water);
+        sodiumDisplay.textContent = toString(water);
 
     }
 </script>
