Updated Style Added weapons tab

--- a/weapons.html
+++ b/weapons.html
@@ -16,8 +16,8 @@
           <div class="row">
             <img id="logo" src="logo.png" style="width: 50px; height: 50px;">
             <h1>Outcasts Drug Calculator By Nicky L</h1>
-            <a href=""><button>Drugs</button></a>
-            <a href="weapons.html"><button>Weapons</button></a>
+            <a href="index.html"><button>Drugs</button></a>
+            <a href=""><button>Weapons</button></a>
           </div>
         </div>
     </div>
