Fixed small issue

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           morphDisplay.setAttribute("style","display:block;");
           remMorphDisplay.setAttribute("style","display:block;");
           bricksDisplay.setAttribute("style","display:block;");
-          outputs.setAttribute("style","display:none;");
+          outputs2.setAttribute("style","display:none;");
 
           waterDisplay2.textContent = 0;
           aceticDisplay2.textContent = 0;
