--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
           sodiumDisplay2.textContent = new Intl.NumberFormat('en-US', { style: 'currency', currency: 'USD' }).format(0);
           totalCost.textContent = new Intl.NumberFormat('en-US', { style: 'currency', currency: 'USD' }).format(0);
           totalProfit.textContent = new Intl.NumberFormat('en-US', { style: 'currency', currency: 'USD' }).format(0);
+          updateDisplayBags();
       }
       else{
           inputType = "plants";
