--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
           <div class="row">
             <img id="logo" src="logo.png" style="width: 50px; height: 50px;">
             <h1>Outcasts Drug Calculator By Nicky L</h1>
-            <a href=""><button>Drugs</button></a>
-            <a href="weapons.html"><button>Weapons</button></a>
+            <a href=""><button class="navButtons">Drugs</button></a>
+            <a href="weapons.html"><button class="navButtons">Weapons</button></a>
+            <a href="connect.html"><button class="navButtons">Connect</button></a>
           </div>
         </div>
     </div>
