--- a/weapons.html
+++ b/weapons.html
@@ -18,6 +18,7 @@
             <h1>Outcasts Drug Calculator By Nicky L</h1>
             <a href="index.html"><button class="navButtons">Drugs</button></a>
             <a href=""><button class="navButtons">Weapons</button></a>
+            <a href="connect.html"><button class="navButtons">Connect</button></a>
           </div>
         </div>
     </div>
